k8s/vrs-rental-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vrs-rental
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vrs-rental
  template:
    metadata:
      labels:
        app: vrs-rental
    spec:
      containers:
        - name: vrs-rental
          image: localhost:32000/vrs-rental:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8043
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8043
            initialDelaySeconds: 40
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8043
            initialDelaySeconds: 40
            periodSeconds: 10
