k8s/vrs-rental-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vrs-rental-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: vrs-rental.k8s.local.vrs
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vrs-rental
                port:
                  number: 80
